--- a/TwitterCloneWithFirebase/app/src/main/AndroidManifest.xml
+++ b/TwitterCloneWithFirebase/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs456.chris.twitterclonewithfirebase">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
